--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "vue-router": "^3.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -33,7 +39,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-mixed-spaces-and-tabs": 0
+    }
   },
   "browserslist": [
     "> 1%",
