--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bilian Musi",
+  "name": "BilianMusic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,8 +14,10 @@
     "moment-timezone": "^0.5.34",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "vue-toastr": "^2.1.2",
     "vue-router": "^3.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
