--- a/package.json
+++ b/package.json
@@ -5,28 +5,38 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "vue-toastr": "^2.1.2",
-    "vue-router": "^3.2.0",
     "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vue-toastr": "^2.1.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.0.0-beta.32",
     "axios": "^0.21.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.5.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jest-transform-stub": "^2.0.0",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
